avoid Draftjs selection bug on firefox

--- a/admin/style/main.scss
+++ b/admin/style/main.scss
@@ -209,7 +209,7 @@ div.multilevel-selector__second-level__menu-list {
   position: fixed;
   bottom: 0px;
   background-color: white;
-  z-index: 500
+  z-index: 1100;
 }
 $duration: 0.2s;
 
